# mstar

./: .gitignore  .sample.env  AGENTS.md  CLAUDE.md  DESIGN_async_audio.md  DESIGN_chunked_prefill.md  DESIGN_cuda_graph.md  DESIGN_fp8.md  DESIGN_mixed_walk.md  DESIGN_moe.md  DESIGN_pending_queue.md  DESIGN_spec.md  ENVIRONMENT.md  EXPERIMENTS.md  FINDINGS.md  HANDOFF.md  LICENSE  README.md  RESULTS.md  RISK_NOTES.md  RUNBOOK_QWEN3_OMNI_UNIFIED.md  TODO.md  pyproject.toml  split_qwen3_omni_pr.sh  validate_warmup.py
.github/workflows/: ci.yml  docs.yml
benchmark/: HANDOFF_qwen3_omni_serving.md  base.py  compare_robotics.py  dataset.py  encoder_before_after.py  full_sweep_encasync_i2t.sh  full_sweep_encplace_i2t.sh  hf_vjepa2_ac.py  mvp_encoder_async.sh  mvp_encoder_chunk_coalesce.sh  mvp_encoder_placement.sh  openpi_pi05.py  qwen3_omni_encoder_parity.py  qwen3_omni_encoders.py  request.py  run_benchmark.sh  run_omni_paths.sh  run_robotics.py  runner.py  setup_and_run_qwen3_omni_encoders.sh  sglang_omni_instructions.md  sweep.sh  utils.py  validate_actions.py  validate_latents.py  vjepa2_repo_ac.py  vllm_omni_instructions.md  voxserve_instructions.md
benchmark-personal/merge-prefill-walks/: command.txt  env.txt  launch_server.sh  plot_ttft_ab.py  requirements.txt
benchmark/artifacts/: CODE_REVIEW_qwen3_omni_encoders.md  MSTAR_I2T_S2T_I2S_optimization_review.md  README_qwen3_omni_encoders.md
benchmark/assets/: t2s.txt
benchmark/convenience/: parse_i2t_table.py
benchmark/serving_scripts/: README.md  bench_record.py  bench_speech.sh  bench_system.sh  capture_env.sh  orchestrate_rerun.sh  plot_serving.py  run_mstar_paths.sh  serve_mstar.sh  serve_sglang.sh  serve_sglang_speech.sh  serve_vllm.sh
benchmarks/: chartstyle.mplstyle
benchmarks/encoder-coalesce/: command.txt  env.txt  generate_charts.py  requirements.txt  run_benchmark.sh
benchmarks/qwen3-omni-i2s-mstar-old/: command.txt  requirements.txt
benchmarks/qwen3-omni-i2s-vllm/: analyze.py  command.txt  requirements.txt
benchmarks/qwen3-omni-joint/: EXPLANATION_GRID.md  FINDINGS_section7.md  LEARNINGS.md  NUMBERS.md  PR_SUMMARY.md  RECHECK_I2S.md  RESULTS.md  REVIEWER_START.md  aggregate.py  command.txt  compare_audio.py  env.txt  fold_recheck.py  ingest_sweep.py  make_numbers.py  make_proof_charts.py  raw_audio_to_speech.json  raw_audio_to_text.json  raw_image_to_speech.json  raw_image_to_text.json  recheck_i2s.sh  recheck_old.sh  run_and_commit.sh  sweep_vllm.sh
benchmarks/qwen3-omni-native-encoders/: ARCHITECTURE.md  BENCHMARK.md  KNOWLEDGE_cudagraph_compile_mixedwalk.md  NUMBERS.md  STORY.md  command.txt  env.txt  raw_audio_to_speech.json  raw_audio_to_text.json  raw_image_to_speech.json  raw_image_to_text.json
benchmarks/qwen3-omni-s2s-mstar-old/: command.txt
benchmarks/qwen3-omni-s2s-vllm/: command.txt
benchmarks/qwen3-omni-seedtts-2gpu/: .gitignore  FINDINGS.md  analyze.py  build_mstar.sh  capture_env.sh  command.txt  env.txt  raw.json  requirements.txt
benchmarks/qwen3-omni-unified/: DESIGN.md  fast_bench.sh  final_bench.py  make_charts.py
benchmarks/ttft-decompose/: breakdown.json  breakdown.txt  chart_ttft.py  command.txt  coresidency_sensitivity.json  env.txt  launch_server.sh  make_raw.py  parse_ttft.py  raw.json  run_clients.sh
configs/: bagel.yaml  bagel_cfg_parallel.yaml  bagel_img_disaggregated.yaml  bagel_pd_disaggregated.yaml  bagel_single_gpu.yaml  orpheus_pd_disaggregated.yaml  orpheus_tp2.yaml  pi05_droid.yaml  qwen3omni.yaml  qwen3omni_2gpu.yaml  qwen3omni_colocated.yaml  qwen3omni_full_tp2.yaml  qwen3omni_pd_disaggregated.yaml  qwen3omni_talker_codec_colocated.yaml  qwen3omni_thinker_tp2.yaml  vjepa2.yaml  vjepa2_ac.yaml
configs/examples/: dummy.yaml  dummy_omni.yaml  showo2.yaml
docs/: BATCHFILL.md  CONFIG_KNOBS.md  PARITY_MODE.md  adding_models.rst  api.rst  architecture.rst  clients.rst  conf.py  index.rst  installation.rst  models.rst  quickstart.rst  requirements.txt  serving.rst
examples/: curl.sh  openai_chat.py  openai_tts.py  sdk_chat.py  sdk_image.py  sdk_tts.py
mminf/: __init__.py  ipc_formats.py  status.py
mminf/api_server/: data_worker.py  entrypoint.py  media_io.py  request_types.py  types.py
mminf/cli/: main.py
mminf/client/: __init__.py  client.py  media.py  types.py
mminf/communication/: communicator.py  manager.py  tensors.py
mminf/conductor/: conductor.py  dummy_conductor.py  formats.py  request_info.py
mminf/distributed/: base.py  communication.py  config.py
mminf/engine/: __init__.py  ar_engine.py  audio_codec_engine.py  base.py  cache_manager.py  code_predictor_engine.py  cpu_page_pool.py  cuda_graph_config.py  cuda_graph_runner.py  enc_dec_engine.py  flashinfer_utils.py  flow_engine.py  kv_cache_engine.py  kv_store.py  stateless_engine.py
mminf/graph/: base.py  base_ARCHIVE.py  graph_io.py  loop_index.py  loop_indices.py  request_queues.py  special_destinations.py  worker_assignment.py
mminf/model/: bagel_model.py  base.py  dummy_model.py  dummy_omni_model.py  registry.py  submodule_base.py  utils.py
mminf/streaming/: chunk_policy.py  stream_buffer.py
mminf/utils/: attention.py  flashinfer_utils.py  ipc_format.py  logging_config.py  profiler.py  sampling.py
mminf/worker/: ASYNC_REDESIGN.md  dummy_worker.py  engine_manager.py  micro_scheduler.py  node_manager_utils.py  stage_manager_utils.py  worker.py
mstar/: __init__.py
mstar/api_server/: data_worker.py  entrypoint.py  request_types.py
mstar/cli/: main.py
mstar/client/: __init__.py  client.py  types.py
mstar/communication/: communicator.py  event.py  tensors.py
mstar/conductor/: conductor.py  request_info.py
mstar/distributed/: base.py  communication.py  utils.py
mstar/engine/: __init__.py  base.py  batchfill_stats.py  cache_manager.py  cpu_page_pool.py  cuda_graph_config.py  cuda_graph_runner.py  kv_cache_engine.py  kv_store.py  mixed_walk.py  (+2 more)
perf_testing/: offline_homogenous.sh
test/: test_phase1.py  test_request_queues.py  test_worker_launch.py
triage_out/: on_fixed_b1.gpusample  on_fixed_b16.gpusample  on_fixed_b32.gpusample  on_fixed_b4.gpusample
(+1244 files in other folders)
