[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mminf"
version = "0.1.0"
description = "Multimodal inference engine"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "numpy",
    "PyYAML",
    "pyzmq",
    "python-multipart",
    "torch",
    "uvicorn",
]

[project.scripts]
mminf-serve = "mminf.api_server.entrypoint:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

bagel = [
    "einops",
    "flashinfer-python",
    "huggingface-hub",
    "mooncake-transfer-engine",
    "Pillow",
    "regex",
    "safetensors",
    "torchvision",
    "torchaudio",
    "torchcodec",
    "transformers",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mminf*"]
exclude = ["tests*", "benchmark*", "examples*"]

[tool.ruff]
exclude = [".git", ".ruff_cache", ".venv"] 
line-length = 120
target-version = "py312"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["F", "E", "W", "I", "B", "PL", "N"] 
ignore = [
    "B006",    # Do not use mutable data structures for argument defaults
    "B008",    # Do not perform function call in argument defaults
    "E741",    # Ambiguous variable name
    "F841",    # Local variable is assigned to but never used
    "N801",    # Class name should be in CamelCase
    "N802",    # Function name should be lowercase
    "N803",    # Argument name should be lowercase
    "N806",    # Variable in function should be lowercase
    "N812",    # Lowercase imported as non-lowercase
    "PLC0415", # `import` should be at the top-level of a file
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "PLW0603", # Using the global statement
    "PLW2901", # Loop variable overwritten by assignment target
]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
docstring-code-format = true
